# function-graph-explorer

./: .gitignore  .vimspector.json.example  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  controller.cpp  controller.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h
cmake/: FindJack.cmake
include/: complex.h  complex_adaptor.h  config.h.in  controller.h  function.h  functiondisplayoptions.h  functionview.h  global.h  graphview.h  jack.h  mainwindow.h  model.h
include/model/: cache.h  function.h  model.h
include/view/: functiondisplayoptions.h  functionview.h  graphview.h  mainwindow.h  viewdata.h
resources/tips/: sinusoids.md
scripts/: build.fish  clean.fish  conan_benchmark.fish  conan_build.fish  conan_test.fish  run.fish  test.fish
src/: controller.cpp  function.cpp  functiondisplayoptions.cpp  functionview.cpp  global.cpp  graphview.cpp  jack.cpp  main.cpp  mainwindow.cpp  model.cpp
src/app/: CMakeLists.txt  application.cpp  application.h  controller.cpp  controller.h  main.cpp  resources.cpp  resources.h  resources.qrc
src/app/resources/help/: help.md
src/app/resources/tips/: fourier.md  magic_frequencies.md
src/audio/: CMakeLists.txt  audio_worker.cpp  jack.cpp
src/audio/include/fge/audio/: audio_worker.h  jack.h  sample_ring_buffer.h
src/model/: CMakeLists.txt  func_network.cpp  func_network_impl.cpp  function.cpp  function_collection.cpp  function_collection_impl.cpp  function_sampling_utils.cpp  model.cpp  model_impl.cpp  sampled_func_collection.cpp  sampled_func_collection_impl.cpp  sampled_function.cpp
src/model/include/fge/model/: cache.h  func_network.h  func_network_impl.h  function.h  function_collection.h  function_collection_impl.h  function_sampling_utils.h  model.h  model_impl.h  sampled_func_collection.h  sampled_func_collection_impl.h  sampled_function.h  template_utils.h  template_utils_def.h
src/shared/: CMakeLists.txt  data.cpp  global.cpp  parameter_utils.cpp  utils.cpp
src/shared/include/fge/shared/: complex.h  complex_adaptor.h  concurrency_utils.h  data.h  global.h  parameter_utils.h  utils.h
src/view/: CMakeLists.txt  aboutdialog.cpp  functiondisplayoptions.cpp  functionview.cpp  graphview.cpp  helpdialog.cpp  jack.cpp  keybindings.cpp  mainwindow.cpp  parameter_utils.cpp  parametersedit.cpp  parametervalueentry.cpp  statistics.cpp  tipsdialog.cpp
src/view/include/fge/view/: aboutdialog.h  data.h  functiondisplayoptions.h  functionview.h  graphview.h  helpdialog.h  jack.h  keybindings.h  mainwindow.h  parameter_utils.h  parametersedit.h  parametervalueentry.h  statistics.h  tipsdialog.h  viewdata.h
src/view/ui/: aboutdialog.ui  functiondisplayoptions.ui  functionview.ui  helpdialog.ui  mainwindow.ui  parametersedit.ui  parametervalueentry.ui  statistics.ui  tipsdialog.ui
tests/: CMakeLists.txt  modelbenchmark.cpp  modelbenchmark.h  testfunction.cpp  testfunction.h  testmodel.cpp  testmodel.h  testutils.h
ui/: functiondisplayoptions.ui  functionview.ui  mainwindow.ui
